[tool.poetry]
name = "pele"
version = "0.1.0"
description = ""
authors = ["aslan <baristan1aslan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
django-extensions = "^3.2.1"
django-filter = "^22.1"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.0.0"}
DateTimeRange = "^1.2.0"
sorl-thumbnail = "12.6.3"
django-crontab = "^0.7.1"
django-modeltranslation = "^0.18.5"
django-smtp-ssl = "^1.0"
django-crispy-forms = "^1.14.0"
sentry-sdk = "^1.10.1"
isort = "^5.10.1"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

